--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -5,16 +5,18 @@ agent:
     type: e1-standard-2
     os_image: ubuntu2004
 blocks:
-  - name: Test
+  - name: Install dependencies
     task:
       jobs:
-        - name: go test
+        - name: Install
           commands:
-            - sem-version go 1.11
-            - "export GO111MODULE=on"
-            - "export GOPATH=~/go"
-            - "export PATH=/home/semaphore/go/bin:$PATH"
+            - sem-version go 1.16
             - checkout
-            - go get ./...
-            - go test ./...
-            - go build -v .
+            - cache restore
+            - go mod vendor
+            - cache store
+      env_vars:
+        - name: GO111MODULE
+          value: 'on'
+        - name: GOFLAGS
+          value: '-mod=vendor'
