Update Semaphore configuration

--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -20,3 +20,41 @@ blocks:
           value: 'on'
         - name: GOFLAGS
           value: '-mod=vendor'
+      prologue:
+        commands:
+          - sem-version go 1.17.2
+          - checkout
+          - cache restore
+  - name: Test
+    task:
+      env_vars:
+        - name: GO111MODULE
+          value: 'on'
+        - name: GOFLAGS
+          value: '-mod=vendor'
+      prologue:
+        commands:
+          - sem-version go 1.17.2
+          - checkout
+          - cache restore
+      jobs:
+        - name: Test
+          commands:
+            - go test ./...
+  - name: Build
+    task:
+      env_vars:
+        - name: GO111MODULE
+          value: 'on'
+        - name: GOFLAGS
+          value: '-mod=vendor'
+      prologue:
+        commands:
+          - sem-version go 1.17.2
+          - checkout
+          - cache restore
+      jobs:
+        - name: Build
+          commands:
+            - go build -v -o go-gin-app
+            - artifact push project --force go-gin-app
