--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -5,56 +5,16 @@ agent:
     type: e1-standard-2
     os_image: ubuntu2004
 blocks:
-  - name: Install dependencies
-    task:
-      jobs:
-        - name: Install
-          commands:
-            - sem-version go 1.16
-            - checkout
-            - cache restore
-            - go mod vendor
-            - cache store
-      env_vars:
-        - name: GO111MODULE
-          value: 'on'
-        - name: GOFLAGS
-          value: '-mod=vendor'
-      prologue:
-        commands:
-          - sem-version go 1.16
-          - checkout
-          - cache restore
   - name: Test
     task:
-      env_vars:
-        - name: GO111MODULE
-          value: 'on'
-        - name: GOFLAGS
-          value: '-mod=vendor'
-      prologue:
-        commands:
-          - sem-version go 1.16
-          - checkout
-          - cache restore
       jobs:
-        - name: Test
+        - name: go test
           commands:
-            - go test ./... -v
-  - name: Build
-    task:
-      env_vars:
-        - name: GO111MODULE
-          value: 'on'
-        - name: GOFLAGS
-          value: '-mod=vendor'
-      prologue:
-        commands:
-          - sem-version go 1.17.2
-          - checkout
-          - cache restore
-      jobs:
-        - name: Build
-          commands:
-            - go build -v -o go-gin-app
-            - artifact push project --force go-gin-app
+            - sem-version go 1.11
+            - "export GO111MODULE=on"
+            - "export GOPATH=~/go"
+            - "export PATH=/home/semaphore/go/bin:$PATH"
+            - checkout
+            - go get ./...
+            - go test ./...
+            - go build -v .
